--- a/src/styles/footer/Footer.scss
+++ b/src/styles/footer/Footer.scss
@@ -1,7 +1,7 @@
 .Footer {
   width: 100%;
   height: 10vh;
-  background-color: green;
+  background-color: #000000;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -17,16 +17,15 @@
   }
 
   .author {
+    color: #FFFFFF;
     width: 310px;
-    text-decoration: none;
-    color: #000000;
     font-size:2rem;
     font-family: 'Reggae One', cursive;
   }
 
   p {
     margin-right: 20px;
-    color: #000000;
+    color: #FFFFFF;
     font-size:2rem;
     font-family: 'Reggae One', cursive;
   }
