feat: add setting and redux state

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -4,3 +4,9 @@
   background-color: green;
   margin: 0 auto;
 }
+
+
+.form-check-input:checked {
+  background-color: green;
+  border-color: green;
+}
