--- a/src/styles/main/game/Player.scss
+++ b/src/styles/main/game/Player.scss
@@ -1,12 +1,12 @@
-.Player {
+.Player, .Computer {
   position: relative;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   margin: 0 auto;
   width: 70%;
   height: 20%;
 
-  img{
+  img {
     border: 1px solid black;
     border-radius: 5px;
     margin-left: -10%;
@@ -15,33 +15,119 @@
   img:first-child {
     margin-left: 0;
   }
+}
 
+.Player {
   img:hover {
     z-index: 1;
   }
-
 }
 
 
-@media (max-width: 1000px) {
-  .Player{
-    img{
+@media (max-width: 1301px) {
+  .Player, .Computer{
+    img {
       border: 1px solid black;
       border-radius: 5px;
+      margin-left: -11%;
+    }
+  }
+
+}
+@media (max-width: 1215px) {
+  .Player, .Computer{
+    img {
+      border: 1px solid black;
+      border-radius: 5px;
+      margin-left: -12%;
+    }
+  }
+
+}
+@media (max-width: 1140px) {
+  .Player ,.Computer{
+    img {
+      border: 1px solid black;
+      border-radius: 5px;
+      margin-left: -13%;
+    }
+  }
+
+}
+@media (max-width: 1075px) {
+  .Player ,.Computer{
+    img {
+      border: 1px solid black;
+      border-radius: 5px;
+      margin-left: -14%;
+    }
+  }
+
+}
+@media (max-width: 1013px) {
+  .Player ,.Computer{
+    img {
+      border: 1px solid black;
+      border-radius: 5px;
+      margin-left: -15%;
+    }
+  }
+
+}
+@media (max-width: 959px) {
+  .Player ,.Computer{
+    img {
+      border: 1px solid black;
+      border-radius: 5px;
+      margin-left: -16%;
+    }
+  }
+
+}
+@media (max-width: 912px) {
+  .Player ,.Computer{
+    img {
+      border: 1px solid black;
+      border-radius: 5px;
+      margin-left: -18%;
+    }
+  }
+
+}
+@media (max-width: 833px) {
+  .Player ,.Computer{
+    img {
+      margin-left: -23%;
+    }
+  }
+
+}
+@media (max-width: 681px) {
+  .Player ,.Computer{
+    width: 95%;
+
+    img {
+      margin-left: -18%;
+    }
+  }
+
+}
+@media (max-width: 641px) {
+  .Player ,.Computer{
+    width: 95%;
+
+    img {
       margin-left: -20%;
     }
   }
 
 }
+@media (max-width: 604px) {
+  .Player ,.Computer{
+    width: 95%;
 
-
-@media (max-width: 700px) {
-  .Player{
-    img{
-      border: 1px solid black;
-      border-radius: 5px;
-      margin-left: -30%;
+    img {
+      margin-left: -25%;
     }
   }
-
 }
