--- a/src/styles/main/game/PlayField.scss
+++ b/src/styles/main/game/PlayField.scss
@@ -5,14 +5,20 @@
   display: flex;
   align-items: center;
 
-  .set {
+  .Set {
+    left: -13%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
     position: relative;
     .suit{
       transform: rotate(90deg);
+      margin-bottom: 40px;
     }
     div {
       position: absolute;
-      top: 0;
       left: -35%;
       h2{
         background-color: black;
