--- a/src/components/Main/Game/PlayField/Field/Field.scss
+++ b/src/components/Main/Game/PlayField/Field/Field.scss
@@ -3,27 +3,42 @@
   padding: 0;
   width: 100%;
   height: 100%;
-  color: #FFFFFF;
+  color: #ffffff;
   display: flex;
   justify-content: space-between;
   align-items: center;
 
   .GameTable {
+    overflow: hidden;
+    scroll-behavior: center;
     width: 100%;
     height: 90%;
-    background-color: blue;
 
-    img{
+    img {
       border: 1px solid black;
       border-radius: 10px;
     }
 
     .BeatCard {
       position: relative;
-      left : -98px;
-      transform:rotate(25deg);
+      left: -98px;
+      transform: rotate(25deg);
       margin: 0;
     }
   }
+}
 
+@media (max-width: 600px) {
+  .Field {
+    .GameTable {
+      img {
+        height: 120px;
+        width: 75px;
+      }
+
+      .BeatCard {
+        left: -75px;
+      }
+    }
+  }
 }
